add: basic implementation completed

--- a/force-app/main/default/classes/JSONPlaceholderExercise.cls
+++ b/force-app/main/default/classes/JSONPlaceholderExercise.cls
@@ -10,11 +10,15 @@ public class JSONPlaceholderExercise {
     public static String getPostById(Integer postId) {
         // TODO: Student Implementation
         // 1. Create a new HTTP request
+        HttpRequest req = new HttpRequest();
         // 2. Set the endpoint URL using BASE_URL + '/posts/' + postId
+        req.setEndpoint(BASE_URL + '/posts/' + postId);
         // 3. Set the HTTP method to 'GET'
+        req.setMethod('GET');
         // 4. Send the request and get the response
+        HttpResponse res = new Http().send(req);
         // 5. Return the response body as string
-        return null;
+        return res.getBody();
     }
     
     /**
@@ -28,13 +32,22 @@ public class JSONPlaceholderExercise {
     public static String createPost(String title, String body, Integer userId) {
         // TODO: Student Implementation
         // 1. Create a new HTTP request
+        HttpRequest req = new HttpRequest();
         // 2. Set the endpoint URL using BASE_URL + '/posts'
+        req.setEndpoint(BASE_URL + '/posts');
         // 3. Set the HTTP method to 'POST'
+        req.setMethod('POST');
         // 4. Create a JSON string with the post data
         // 5. Set the request body
+        req.setBody(JSON.serialize(new Map<String,Object> {
+            'title' => title,
+            'body' => body,
+            'userId' => userId
+        }));
         // 6. Send the request and get the response
+        HttpResponse res = new Http().send(req);
         // 7. Return the response body as string
-        return null;
+        return res.getBody();
     }
     
     /**
@@ -49,13 +62,22 @@ public class JSONPlaceholderExercise {
     public static String updatePost(Integer postId, String title, String body, Integer userId) {
         // TODO: Student Implementation
         // 1. Create a new HTTP request
+        HttpRequest req = new HttpRequest();
         // 2. Set the endpoint URL using BASE_URL + '/posts/' + postId
+        req.setEndpoint(BASE_URL + '/posts/' + postId);
         // 3. Set the HTTP method to 'PUT'
+        req.setMethod('PUT');
         // 4. Create a JSON string with the updated post data
         // 5. Set the request body
+        req.setBody(JSON.serialize(new Map<String,Object> {
+            'title' => title,
+            'body' => body,
+            'userId' => userId
+        }));
         // 6. Send the request and get the response
+        HttpResponse res = new Http().send(req);
         // 7. Return the response body as string
-        return null;
+        return res.getBody();
     }
     
     /**
@@ -68,13 +90,21 @@ public class JSONPlaceholderExercise {
     public static String patchPostTitle(Integer postId, String title) {
         // TODO: Student Implementation
         // 1. Create a new HTTP request
+        HttpRequest req = new HttpRequest();
         // 2. Set the endpoint URL using BASE_URL + '/posts/' + postId
+        req.setEndpoint(BASE_URL + '/posts/' + postId);
         // 3. Set the HTTP method to 'PATCH'
+        req.setMethod('PATCH');
         // 4. Create a JSON string with only the title
+        String body = JSON.serialize(new Map<String,Object> {
+            'title' => title
+        });
         // 5. Set the request body
+        req.setBody(body);
         // 6. Send the request and get the response
+        HttpResponse res = new Http().send(req);
         // 7. Return the response body as string
-        return null;
+        return res.getBody();
     }
     
     /**
@@ -86,10 +116,14 @@ public class JSONPlaceholderExercise {
     public static Integer deletePost(Integer postId) {
         // TODO: Student Implementation
         // 1. Create a new HTTP request
+        HttpRequest req = new HttpRequest();
         // 2. Set the endpoint URL using BASE_URL + '/posts/' + postId
+        req.setEndpoint(BASE_URL + '/posts/' + postId);
         // 3. Set the HTTP method to 'DELETE'
+        req.setMethod('DELETE');
         // 4. Send the request and get the response
+        HttpResponse res = new Http().send(req);
         // 5. Return the response status code
-        return null;
+        return res.getStatusCode();
     }
 } 
